--- a/trunk/wargen/Código-Fonte/servidor/wargen/WebContent/WEB-INF/web.xml
+++ b/trunk/wargen/Código-Fonte/servidor/wargen/WebContent/WEB-INF/web.xml
@@ -5,7 +5,7 @@
   </session-config>
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>br.unic.wargen.gerador.servlet.LoginServlet</servlet-class>
+    <servlet-class>br.com.wargen.gerador.servlet.LoginServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
@@ -13,7 +13,7 @@
   </servlet-mapping>
   <servlet>
     <servlet-name>LogoutServlet</servlet-name>
-    <servlet-class>br.unic.wargen.gerador.servlet.LogoutServlet</servlet-class>
+    <servlet-class>br.com.wargen.gerador.servlet.LogoutServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>LogoutServlet</servlet-name>
@@ -23,7 +23,7 @@
   
   <servlet>
     <servlet-name>FormUploadArquivoServlet</servlet-name>
-    <servlet-class>br.unic.wargen.gerador.servlet.arquivo.FormUploadArquivoServlet</servlet-class>
+    <servlet-class>br.com.wargen.gerador.servlet.arquivo.FormUploadArquivoServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>FormUploadArquivoServlet</servlet-name>
@@ -31,7 +31,7 @@
   </servlet-mapping>  
   <servlet>
     <servlet-name>ListaArquivo</servlet-name>
-    <servlet-class>br.unic.wargen.gerador.servlet.arquivo.ListaArquivoServlet</servlet-class>
+    <servlet-class>br.com.wargen.gerador.servlet.arquivo.ListaArquivoServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>ListaArquivo</servlet-name>
@@ -39,7 +39,7 @@
   </servlet-mapping>
   <servlet>
     <servlet-name>ExcluiArquivo</servlet-name>
-    <servlet-class>br.unic.wargen.gerador.servlet.arquivo.ExcluiArquivoServlet</servlet-class>
+    <servlet-class>br.com.wargen.gerador.servlet.arquivo.ExcluiArquivoServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>ExcluiArquivo</servlet-name>
@@ -48,7 +48,7 @@
   
   <servlet>
     <servlet-name>ExcluiModelo</servlet-name>
-    <servlet-class>br.unic.wargen.gerador.servlet.modelo.ExcluiModeloServlet</servlet-class>
+    <servlet-class>br.com.wargen.gerador.servlet.modelo.ExcluiModeloServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>ExcluiModelo</servlet-name>
@@ -57,7 +57,7 @@
   
   <servlet>
     <servlet-name>ExcluiMarcador</servlet-name>
-    <servlet-class>br.unic.wargen.gerador.servlet.marcador.ExcluiMarcadorServlet</servlet-class>
+    <servlet-class>br.com.wargen.gerador.servlet.marcador.ExcluiMarcadorServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>ExcluiMarcador</servlet-name>
@@ -67,7 +67,7 @@
   
   <servlet>
     <servlet-name>ListaAssociacao</servlet-name>
-    <servlet-class>br.unic.wargen.gerador.servlet.associacao.ListaAssociacaoServlet</servlet-class>
+    <servlet-class>br.com.wargen.gerador.servlet.associacao.ListaAssociacaoServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>ListaAssociacao</servlet-name>
@@ -75,7 +75,7 @@
   </servlet-mapping>
   <servlet>
     <servlet-name>FormAssociacao</servlet-name>
-    <servlet-class>br.unic.wargen.gerador.servlet.associacao.FormAssociacaoServlet</servlet-class>
+    <servlet-class>br.com.wargen.gerador.servlet.associacao.FormAssociacaoServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>FormAssociacao</servlet-name>
@@ -83,7 +83,7 @@
   </servlet-mapping>  
   <servlet>
     <servlet-name>ExcluiAssociacao</servlet-name>
-    <servlet-class>br.unic.wargen.gerador.servlet.associacao.ExcluiAssociacaoServlet</servlet-class>
+    <servlet-class>br.com.wargen.gerador.servlet.associacao.ExcluiAssociacaoServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>ExcluiAssociacao</servlet-name>
@@ -93,7 +93,7 @@
   
   <servlet>
     <servlet-name>AplicativoServlet</servlet-name>
-    <servlet-class>br.unic.wargen.gerador.servlet.AplicativoServlet</servlet-class>
+    <servlet-class>br.com.wargen.gerador.servlet.AplicativoServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>AplicativoServlet</servlet-name>
